# otde

./: CMakeLists.txt  README.md
cmake/: FindQt1.cmake
kdecore/: kcharsetsdata.cpp  kwm.cpp
kedit/: CMakeLists.txt
khtmlw/: html.cpp  htmlview.cpp
